# Scansheet

./: .gitignore  PLAN.md  README.md  deploy_scansheet.sh  package-lock.json  package.json  vite.config.js
.github/workflows/: main.yml  publish.yml
archive/: WHY.md
archive/server/: jest.setup.js
client/: index.html  package-lock.json  package.json
client/src/: App.jsx
client/src/components/layout/: Sidebar.jsx
client/src/components/legacy/: EntryInfoPage.jsx  TestPage.jsx
client/src/components/pages/: CategoriesPage.jsx  DatePage.jsx  DatesPage.jsx  EntriesPage.jsx  EntryPage.jsx  HomePage.jsx  SettingsPage.jsx
client/src/components/ui/: ModalWrapper.jsx  StatusMessage.jsx
client/src/context/: ThemeContext.jsx
client/src/hooks/: useOverflow.js
server/: db.js  package-lock.json  package.json  server.js
server/__tests__/: api.test.js
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: categories.rs  dates.rs  entries.rs  mod.rs  scans.rs
src/components/modals/category/: DeleteCategoryPage.jsx  EditCategoryPage.jsx  NewCategoryPage.jsx
src/components/modals/common/: DeletePage.jsx  ExportOptionsPage.jsx  PrintBadgesPage.jsx
src/components/modals/date/: DeleteDatePage.jsx
src/components/modals/entry/: DeleteEntryPage.jsx  EditEntryPage.jsx  (+2 more)
src/components/pages/: CategoriesPage.jsx  DatePage.jsx  DatesPage.jsx  EntriesPage.jsx  EntryPage.jsx  HomePage.jsx
src/components/ui/: MenuWrapper.jsx
(+55 files in other folders)
