[package]
name = "scansheet"
version = "2.0.0"
description = "A Tauri App"
authors = ["michaeltin001"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4"] }
qrcode = "0.14"
image = "0.25"
csv = "1.3"
genpdf = "0.2"
chrono = "0.4"
base64 = "0.22.1"
encoding_rs = "0.8"

[dev-dependencies]
tauri = { version = "2.11.3", features = ["test"] }
